--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sarL3y/blog-API.git"
+    "url": "https://github.com/sarL3y/blog-API.git"
   },
   "author": "sarL3y",
   "license": "ISC",
